* Sun Sep 23 2018 <gerbier@users.sourceforge.net> 2.14-1
- add list of optional tags, to allow rpmrebuild work with old rpm versions
- add dependency on setarch
- add debug code (calls on functions)

* Wed Sep 12 2018 <gerbier@users.sourceforge.net> 2.13-1
- can handle recommends / supplements rpm tags

* Fri Jul 20 2018 <gerbier@users.sourceforge.net> 2.12-1
- apply patch from Bruce Jerrick : Handle Requires(pre,post,preun,postun)
- add new requires syntax with if ( redhat-rpm-config )

* Sun Jun 10 2018 <gerbier@users.sourceforge.net> 2.11-3
- Made minor grammatical fixes to English language translations (patch from beroset)

* Sun Sep 10 2017 <gerbier@users.sourceforge.net> 2.11-2
- fix bad day of week in changelog (rpmbuild warning)
- add dependency to rpm-build package instead rpmbuild binary

* Fri Nov 22 2013 <gerbier@users.sourceforge.net> 2.11
- add install option

* Sun Aug 11 2013 <gerbier@users.sourceforge.net> 2.10-2
- bugfix from 2.10 on test install : test was inverted (applied on rpm files instead installed rpm)

* Thu Aug 01 2013 <valery_reznic@users.sourceforge.net> 2.10
- add tag DISTTAG (feature request)
- do not test install if work on rpm files
- applied patch from Olivier Bourdon for pretrans and postrans

* Sun Jan 13 2013 <valery_reznic@users.sourceforge.net> 2.9
- fix to work with rpm 4.10 (Fedora 18) - error: incorrect format: invalid field width

* Wed Jul 11 2012 <gerbier@users.sourceforge.net> 2.8
- can handle SUGGESTS/ENHANCES rpm tag
- add --cap-from-fs/cap-from-db options
- build rpmrebuild-version.tar.gz to allow rpmbuild -tb work

* Wed Jun 06 2012 <gerbier@users.sourceforge.net> 2.7
- patch from Andreas Kainz for package file checking
- add new unset_tag plugin
- add support for rpm version 5 (mandriva)
- fix -l / --list-plugin option
- add support of posix capability
- add new un_prelink plugin (suggest from Han Holl)
- add RPMREBUILD_OPTS environment variable
- fix problem with different architecture (build 32bit on 64bits)